fixed input text to align

--- a/assets/app/news/form-component.css
+++ b/assets/app/news/form-component.css
@@ -1,10 +1,17 @@
 label{
-    display: table-cell;
-    text-align: left;
-}
-input {
-  display: table-cell;
-}
-div.row{
-    display:table-row;
-}
+    
+    width: 4em;
+    float: left;
+    text-align: right;
+    margin-right: 3em;
+    display: block
+    
+    }
+    
+
+input[type=text] { width: 250px;
+height: 50px; }
+
+
+
+     
